--- a/newBuild/package.json
+++ b/newBuild/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/KseniaIkud/Hotel-website#readme",
   "devDependencies": {
+    "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
