--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "air-datepicker": "^2.2.3",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "material-design-icons": "^3.0.1"
   }
 }
