--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "path-parse": "^1.0.7",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
     "sass": "^1.30.0",
@@ -43,7 +44,7 @@
     "terser-webpack-plugin": "^5.0.3",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "air-datepicker": "^2.2.3",
